composer: Make `test` run for the whole repo
Scripts that want to test specific files should use the `test-some`
command, e.g. `composer test-some path/to/file.php`.

Note that the dependency in Quibble must be merged, released, and
deployed to CI before this can be merged, lest CI is slowed down
massively.

Bug: T199403
Depends-On: I383ec29bfa0f051099c12ada19de04552c6dbd97
Change-Id: I58db748ebeea1f370906bb4c026833325c25486c

--- a/composer.json
+++ b/composer.json
@@ -135,8 +135,8 @@
 		"post-install-cmd": "ComposerVendorHtaccessCreator::onEvent",
 		"post-update-cmd": "ComposerVendorHtaccessCreator::onEvent",
 		"test": [
-			"composer lint",
-			"composer phpcs"
+			"composer lint .",
+			"composer phpcs ."
 		],
 		"test-some": [
 			"composer lint",
