--- a/.gitmodules
+++ b/.gitmodules
@@ -1422,3 +1422,4 @@
 	path = extensions/Editcount
 	url = https://github.com/wikimedia/mediawiki-extensions-Editcount
 	branch = REL1_35
+	ignore = dirty
