--- a/.gitmodules
+++ b/.gitmodules
@@ -1193,11 +1193,6 @@
 	url = https://github.com/wikimedia/mediawiki-extensions-GlobalUsage.git
 	branch = REL1_35
 	ignore = dirty
-[submodule "extensions/GoogleDocs4MW"]
-	path = extensions/GoogleDocs4MW
-	url = https://github.com/wikimedia/mediawiki-extensions-GoogleDocs4MW
-	branch = master
-	ignore = dirty
 [submodule "skins/Femiwiki"]
 	path = skins/Femiwiki
 	url = https://github.com/femiwiki/FemiwikiSkin.git
@@ -1421,5 +1416,10 @@
 [submodule "extensions/RandomSelection"]
 	path = extensions/RandomSelection
 	url = https://github.com/wikimedia/mediawiki-extensions-RandomSelection
+	branch = REL1_35
+	ignore = dirty
+[submodule "extensions/GoogleDocs4MW"]
+	path = extensions/GoogleDocs4MW
+	url = https://github.com/wikimedia/mediawiki-extensions-GoogleDocs4MW
 	branch = REL1_35
 	ignore = dirty
