--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 		"pear/mail": "1.4.1",
 		"pear/mail_mime": "1.10.9",
 		"pear/net_smtp": "1.9.2",
-		"php": ">=7.2.22",
+		"php": ">=7.3.19",
 		"psr/container": "1.0.0",
 		"psr/log": "1.1.3",
 		"ralouphie/getallheaders": "3.0.3",
@@ -75,7 +75,7 @@
 	},
 	"require-dev": {
 		"composer/spdx-licenses": "1.5.4",
-		"doctrine/dbal": "2.10.4||3.0.0",
+		"doctrine/dbal": "3.0.0",
 		"doctrine/sql-formatter": "1.1.1",
 		"giorgiosironi/eris": "^0.10.0",
 		"hamcrest/hamcrest-php": "^2.0",
