--- a/.gitmodules
+++ b/.gitmodules
@@ -1438,3 +1438,7 @@
 	url = https://github.com/wikimedia/mediawiki-extensions-Video
 	branch = REL1_36
 	ignore = dirty
+[submodule "extensions/SecureLinkFixer"]
+	path = extensions/SecureLinkFixer
+	url = https://github.com/wikimedia/mediawiki-extensions-securelinkfixer
+	branch = REL1_36
