--- a/.gitmodules
+++ b/.gitmodules
@@ -1442,3 +1442,4 @@
 	path = extensions/SecureLinkFixer
 	url = https://github.com/wikimedia/mediawiki-extensions-securelinkfixer
 	branch = REL1_36
+	ignore = dirty
