Add polyfills for ES6 array methods
Adds the MDN polyfills for Array.prototype.find, findIndex, and
includes to core, along with a skip function. Polyfills live a
single "es6-polyfills" module in case additional similar polyfills
need to be introduced in the future.

Introducing these in core will allow certain extensions
to stop shipping local copies.

Bug: T264135
Change-Id: I37953f6fcad693a8d25e1a19764abd55bbbbb242

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,8 +2,9 @@
 /resources/lib/
 /resources/src/jquery.tipsy/
 /resources/src/mediawiki.libs.jpegmeta/
-# Skip function
-/resources/src/skip-Promise.js
+
+# Skip functions
+/resources/src/skip-*
 
 # Build tooling
 /docs/
