--- a/.gitmodules
+++ b/.gitmodules
@@ -1463,3 +1463,8 @@
 	url = https://github.com/Universal-Omega/Monaco
 	branch = master
 	ignore = dirty
+[submodule "extensions/UserPageEditProtection"]
+	path = extensions/UserPageEditProtection
+	url = https://github.com/wikimedia/mediawiki-extensions-UserPageEditProtection
+	branch = REL1_36
+	ignore = dirty
