--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"api-testing": "npm run api-testing-lint && mocha --timeout 0 --recursive tests/api-testing",
 		"api-testing-lint": "eslint --cache --max-warnings 0 tests/api-testing/**",
-		"build": "grunt minify",
+		"minify-svg": "svgo --config=.svgo.config.js -q -r -f resources/src",
 		"test": "grunt lint && npm run doc",
 		"qunit": "grunt qunit",
 		"doc": "jsduck",
@@ -28,7 +28,6 @@
 		"grunt-eslint": "23.0.0",
 		"grunt-karma": "4.0.0",
 		"grunt-stylelint": "0.16.0",
-		"grunt-svgmin": "5.0.0",
 		"karma": "5.0.4",
 		"karma-chrome-launcher": "3.1.0",
 		"karma-firefox-launcher": "1.3.0",
@@ -37,8 +36,10 @@
 		"postcss-less": "2.0.0",
 		"qunit": "2.10.0",
 		"stylelint-config-wikimedia": "0.10.3",
+		"svgo": "2.3.0",
 		"wdio-mediawiki": "file:tests/selenium/wdio-mediawiki",
 		"wdio-video-reporter": "3.1.1",
 		"webdriverio": "6.1.12"
-	}
+	},
+	"dependencies": {}
 }
