Freenode -> Libera per wikimedia moving from freenode to libera
Bug: T283247
Change-Id: Iebbb13ac53830a8d77b42bf2954cf80d76d78467
(cherry picked from commit c351c4f06ed1446bfa9474ff3f9bc727dc959b3b)

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ notifications:
   email: false
   irc:
     channels:
-      - "chat.freenode.net#mediawiki-feed"
+      - "irc.libera.chat#mediawiki-feed"
     on_success: change
     on_failure: change
     skip_join: true
