build: Remove 'npm run api-testing-lint' command
These files are already linted by 'npm test'. For running only the
tests, there is no need to lint them first. If there are critical
syntax errors than Node will report these in a useful way either
way.

For quick feedback on the right style during development, one can
use an IDE plugin that provides it even quicker.

Alternatively, one could use 'eslint path/to/subset' to run only the
lint step. I've added a 'npm run lint' command to make this easier,
e.g. when iterating on the style for contributors without an IDE plugin
that want to confirm all lint failures from CI were addressed.

Change-Id: Ic09de49543e50cb5ade241b45741fbdb397f9954

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"private": true,
 	"scripts": {
-		"api-testing": "npm run api-testing-lint && mocha --timeout 0 --recursive tests/api-testing",
-		"api-testing-lint": "eslint --cache --max-warnings 0 tests/api-testing/**",
+		"api-testing": "mocha --timeout 0 --recursive tests/api-testing",
 		"minify-svg": "svgo --config=.svgo.config.js -q -r -f resources/src",
+		"lint": "grunt lint",
 		"test": "grunt lint && npm run doc",
 		"qunit": "grunt qunit",
 		"doc": "jsduck",
