--- a/.gitmodules
+++ b/.gitmodules
@@ -986,7 +986,7 @@
 [submodule "extensions/LinkTitles"]
 	path = extensions/LinkTitles
 	url = https://github.com/bovender/LinkTitles
-	branch = master
+	branch = main
 	ignore = dirty
 [submodule "extensions/TemplateWizard"]
 	path = extensions/TemplateWizard
@@ -1196,7 +1196,7 @@
 [submodule "skins/Citizen"]
 	path = skins/Citizen
 	url = https://github.com/StarCitizenTools/mediawiki-skins-Citizen.git
-	branch = master
+	branch = main
 	ignore = dirty
 [submodule "extensions/Mermaid"]
 	path = extensions/Mermaid
@@ -1321,7 +1321,7 @@
 [submodule "extensions/SnapProjectEmbed"]
 	path = extensions/SnapProjectEmbed
 	url = https://github.com/snapwiki/SnapProjectEmbed.git
-	branch = REL1_36
+	branch = master
 	ignore = dirty
 [submodule "extensions/MediaModeration"]
 	path = extensions/MediaModeration
@@ -1336,11 +1336,6 @@
 [submodule "extensions/Report"]
 	path = extensions/Report
 	url = https://github.com/Kenny2github/Report
-	branch = master
-	ignore = dirty
-[submodule "extensions/Validator"]
-	path = extensions/Validator
-	url = https://github.com/JeroenDeDauw/Validator
 	branch = master
 	ignore = dirty
 [submodule "extensions/EditNotify"]
