phpcs: Use cache flag
This will use a temporary cache directory for the files analyzed by
phpcs, so that subsequent runs are fast.

Bug: T209149
Change-Id: I15967d220c1dbf9f06551cf4a5d01af5ddb739b6

--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,7 @@
 		"serve": "php -S localhost:4000",
 		"lint": "parallel-lint --exclude vendor",
 		"phan": "phan -d . --long-progress-bar",
-		"phpcs": "phpcs -p -s",
+		"phpcs": "phpcs -p -s --cache",
 		"fix": [
 			"phpcbf"
 		],
