--- a/.gitmodules
+++ b/.gitmodules
@@ -1493,3 +1493,8 @@
 	url = https://github.com/wikimedia/mediawiki-extensions-PageForms
 	branch = master
 	ignore = dirty
+[submodule "extensions/SkinPerPage"]
+	path = extensions/SkinPerPage
+	url = https://github.com/wikimedia/mediawiki-extensions-SkinPerPage
+	branch = REL1_36
+	ignore = dirty
